Set VulkanSurface's device_queue_

In a previous CL I accidentally removed the lines which set
device_queue_. As a result, dereferencing it would cause a null pointer
exception.

This patch sets device_queue_ again and fixes our Vulkan tests.

BUG=851749

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I69b5c8038e6b02e42a462bbaabdb24c238d184b0
Reviewed-on: https://chromium-review.googlesource.com/1096439
Commit-Queue: Chris Blume <cblume@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566571}
Former-commit-id: eb9cfd68f3a8db1f4c99902eb1251e90d0772e20